<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">OnTime</string>

    <string name="ok">OK</string>

    <string name="new_alarm">Create new alarm</string>
    <string name="msg_no_history">No history</string>
    <string name="msg_click_add">Click the \"Add\" button below to create new alarm</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_keep_editing">Keep editing</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_go_to_settings">Go to Settings</string>
    <string name="action_enable">Enable alarm</string>
    <string name="title_new_alarm">New alarm</string>
    <string name="title_edit_alarm">Edit alarm</string>
    <string name="title_missed_alarms">Missed alarms</string>
    <string name="hint_alarm_title">Name</string>
    <string name="hint_alarm_notes">Notes</string>
    <string name="action_more_options">More options</string>

    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="option_all_alarms">All alarms</string>
    <string name="option_today_alarms">Today\'s alarms</string>
    <string name="option_history">History</string>

    <!--Context menu in alarm list-->
    <string name="action_skip_once">Skip next alarm</string>
    <string name="action_delete_this_alarm">Delete alarm</string>
    <string name="msg_alarm_skipped">Alarm is skipped to %1$s</string>
    <string name="msg_titled_alarm_skipped">&lt;b>%2$s&lt;/b> is skipped to %1$s</string>
    <string name="action_undo">Undo</string>
    <string name="prompt_delete_untitled_alarm">Delete alarm at &lt;b>%1$s&lt;/b>?</string>
    <string name="prompt_delete_titled_alarm">Delete &lt;b>%1$s&lt;/b>?</string>

    <!--Backup & restore-->
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="msg_backup_successful">Backup completed</string>
    <string name="msg_backup_failed">Backup failed</string>
    <string name="msg_restore_successful">Restore completed</string>
    <string name="msg_restore_failed">Restore failed</string>

    <string name="option_non_repeat">Does not repeat</string>
    <string name="option_repeat_daily">Repeats daily</string>
    <string name="option_repeat_weekly">Repeats weekly</string>
    <string name="option_repeat_monthly">Repeats monthly</string>
    <string name="option_repeat_yearly">Repeats yearly</string>

    <string name="msg_alarm_disabled">Disabled alarm</string>
    <string name="msg_is_repeat_alarm">This alarm will repeat</string>
    <string name="msg_is_snoozed">This alarm is snoozed</string>

    <string name="option_same_day_of_month">on the same day of the month</string>
    <string name="repeat_by_day_of_week">Repeat by day of week</string>
    <string name="option_last_day_of_month">on the last day of the month</string>
    <string name="option_custom">custom&#8230;</string>

    <string name="msg_alarm_will_go_off">Alarm will go off in %1$s</string>
    <string name="msg_cannot_set_past_time">Can\'t set alarm in the past</string>
    <string name="msg_select_at_least_one_day">Please select at least one day to repeat</string>

    <string name="prompt_discard_changes">Discard changes to this alarm?</string>
    <string name="prompt_discard_new_alarm">Discard this alarm?</string>
    <string name="prompt_delete_alarm">Delete alarm?</string>

    <string name="msg_repeat_mode">Repeat</string>

    <string name="msg_every_x_cycles_1">Repeats every</string>
    <string name="msg_every_x_cycles_2">%1$s</string>
    <string name="msg_alarm_date">Alarm date</string>
    <string name="msg_start_date">Start date</string>
    <string name="msg_activate_date">From %1$s</string>
    <string name="msg_next_date">Alarm will go off on %1$s</string>
    <string name="msg_ringtone">Ringtone</string>
    <string name="msg_vibrate">Vibrate</string>
    <string name="msg_ask_for_perm">Allow \"Storage\" in \"App permissions\" to use custom ringtone</string>
    <string name="msg_allow_ringtone_access">Click to allow access to custom ringtone</string>
    <string name="msg_silence_after">Silence after</string>
    <string name="msg_silence_after_never">Never</string>
    <string-array name="msg_ringtone_durations">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>Ringtone played once</item>
        <item>Never</item>
    </string-array>

    <string name="msg_default_alarm_title">OnTime Alarm</string>
    <string name="channel_name_alarm">Alarms</string>
    <string name="channel_name_current_alarm">Current alarms</string>
    <string name="msg_click_for_more_options">%1$s &#8226; Click for details</string>
    <string name="msg_snoozed_until">Snoozed until %1$s</string>
    <string name="msg_skipped_to">Skipped to %1$s</string>
    <string name="msg_snoozed_time">%1$s (%2$s)</string>
    <string name="action_dismiss_alarm">Dismiss</string>
    <string name="action_delay_alarm">Snooze…</string>
    <string name="title_delay_alarm">Snooze</string>
    <string name="hint_records">Records</string>

    <string name="msg_missed_alarm_next_time">%1$s &#8226; Next: %2$s</string>
    <string name="action_dismiss_all">Dismiss all</string>

    <string name="msg_today">Today</string>
    <string name="msg_tomorrow">Tomorrow</string>
    <string name="msg_am">AM</string>
    <string name="msg_pm">PM</string>

    <!--History list-->
    <string name="msg_show_more">Show more</string>
    <string name="msg_show_less">Show less</string>
<!--    <string name="msg_done_on_time">Done on time</string>-->
    <string name="msg_done_time">Done at %1$s, %2$s</string>

    <!--About-->
    <string name="title_about">About</string>
    <string name="msg_author" translatable="false">2019 Qishen Wu</string>
    <string name="action_rate">Rate this app</string>
    <string name="action_feedback">Feedback</string>

    <string-array name="time_distance">
        <item>less than 1 minute</item>
        <item><xliff:g id="minute">%3$s</xliff:g></item>
        <item><xliff:g id="hour">%2$s</xliff:g></item>
        <item><xliff:g id="hour">%2$s</xliff:g> and <xliff:g id="minute">%3$s</xliff:g></item>
        <item><xliff:g id="day">%1$s</xliff:g></item>
        <item><xliff:g id="day">%1$s</xliff:g> and <xliff:g id="minute">%3$s</xliff:g></item>
        <item><xliff:g id="day">%1$s</xliff:g> and <xliff:g id="hour">%2$s</xliff:g></item>
        <item><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="hour">%2$s</xliff:g>, and <xliff:g id="minute">%3$s</xliff:g></item>
    </string-array>

    <string-array name="repeat_types">
        <item>@string/option_non_repeat</item>
        <item>@string/option_repeat_daily</item>
        <item>@string/option_repeat_weekly</item>
        <item>@string/option_repeat_monthly</item>
        <item>@string/option_repeat_yearly</item>
    </string-array>

    <plurals name="msg_times">
        <item quantity="one">once</item>
        <item quantity="two">twice</item>
        <item quantity="other">%1$d times</item>
    </plurals>

    <plurals name="years">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="years_for_repeat">
        <item quantity="one">Yearly on %2$s</item>
        <item quantity="other">Every %1$d years on %2$s</item>
    </plurals>
    <plurals name="months_for_repeat">
        <item quantity="one">Monthly on day %2$s</item>
        <item quantity="other">Every %1$d months on day %2$s</item>
    </plurals>
    <plurals name="weeks_for_repeat">
        <item quantity="one">%2$s</item>
        <item quantity="other">Every %1$d weeks on %2$s</item>
    </plurals>
    <plurals name="days_for_repeat">
        <item quantity="one">Daily</item>
        <item quantity="other">Every %1$d days</item>
    </plurals>

    <string name="msg_days_for_repeat_single">Daily</string>
    <string name="msg_weeks_for_repeat_single">%2$s</string>
    <string name="msg_months_for_repeat_single">Monthly on day %2$s</string>
    <string name="msg_years_for_repeat_single">Yearly on %2$s</string>

    <plurals name="seconds_with_quan">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minutes_with_quan">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours_with_quan">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days_with_quan">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks_with_quan">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_alarms">Alarms</string>
    <string name="pref_key_snooze_lengths" translatable="false">snooze_lengths</string>
    <string name="pref_title_snooze_lengths">Snooze lengths</string>


</resources>
