<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <net.wuqs.ontime.feature.editalarm.OptionItemView
        android:id="@+id/oiv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:captionText="@string/msg_start_date"
        app:iconImage="@drawable/ic_event_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:valueText="Mon, Aug 6" />

    <include
        android:id="@+id/inc_repeatCycle"
        layout="@layout/partial_edit_cycle_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_monthlyMode" />

    <RadioGroup
        android:id="@+id/rg_monthlyMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_start_padding"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oiv_date">

        <RadioButton
            android:id="@+id/rb_dayOfMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_same_day_of_month" />

        <RadioButton
            android:id="@+id/rb_dayOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_by_day_of_week"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rb_last_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_last_day_of_month"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rb_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_custom" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_day_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/boundary_margin"
        android:layout_marginStart="@dimen/content_start_padding"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inc_repeatCycle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>